--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,9 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
     <title>TabPay</title>
+    {% endif %}
+    <link rel="stylesheet" href="../static/css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Font: Montserrat -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap Icons CDN -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
-    {% block content %} {% endblock %}
+    {% if title != 'TabPay | Home' %}
+    <!-- Sidebar -->
+    <div class="glass-sidebar d-flex flex-column">
+      <!-- TabPay Logo -->
+      <div class="tabpay-logo"><span>Tab</span>Pay</div>
+
+      <a href="#" class="active"><i class="bi bi-grid-fill"></i> Dashboard</a>
+      <a href="#"><i class="bi bi-currency-exchange"></i> Contribute</a>
+      <a href="#"><i class="bi bi-house-fill"></i> Host</a>
+      <a href="#"><i class="bi bi-people-fill"></i> Committee</a>
+      <a href="#"><i class="bi bi-bar-chart-fill"></i> Reports</a>
+
+      <!-- Bottom of the Sidebar -->
+      <div class="sidebar-bottom mt-auto">
+        <a href="#"><i class="bi bi-gear-fill"></i> Settings</a>
+        <a href="#"><i class="bi bi-box-arrow-right"></i> Logout</a>
+      </div>
+    </div>
+    {% endif %} {% block content %} {% endblock %}
+    <!-- Bootstrap JS & Icons -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.js"></script>
   </body>
 </html>
