--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,3 @@
 {% extends 'base.html' %} {% block content %}
-<h2>Welcome to TabPay!</h2>
+<h2 class="text-center">Welcome to TabPay!</h2>
 {% endblock %}
