app/routes.py i have modified the create_new_account, in static/css/styles.css i modified the responsive, in app/template i modified label and input, in app/teplate/auth.html i extended the create_new_account

--- a/app/templates/create_new_account.html
+++ b/app/templates/create_new_account.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create new account</title>
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
-<body>
-    <div class="container">
-        <div class="image-section"></div>
-        <div class="form-section">
-            <h1>Create new Account</h1>
-            <p>Already Registered? Login</p>
-            
-            <hr>
-            <label for="Jiara Martins">Please enter your Full Names</label>
-            <input type="text" id="#" placeholder="Jiara Martins" required>
-            <label for="email">Please enter Email</label>
-            <input type="email" id="email" placeholder="hello@reallygreatsite.com" required>
-            <label for="password">Please enter password</label>
-            <input type="password" id="password" placeholder="******" required>
-            <label for="ID No">ID No:</label>
-            <input type="password" id="password" placeholder="xxxxxxxx" required>
-            <button type="submit">SIGN UP</button>
-        </div>
+{% extends 'auth.html' %} {% block content %}
+<main class="create-account-body">
+<div class="acc-container">
+    <div class="acc-image-section"></div>
+    <div class="acc-form-section">
+        <h1 class="acc-h1">Create new Account</h1>
+        <p class="acc-p">Already Registered? Login</p>
+        
+        <hr>
+        <label for="name" class="acc-label">Please enter your Full Names</label>
+        <input type="text" class="acc-input" id="name" placeholder="Jiara Martins" required>
+        <label for="email" class="acc-label">Please enter Email</label>
+        <input type="email" class="acc-input" id="email" placeholder="hello@reallygreatsite.com" required>
+        <label for="password" class="acc-label">Please enter password</label>
+        <input type="password" class="acc-input" id="password" placeholder="******" required>
+        <label for="ID No" class="acc-label">ID No:</label>
+        <input type="number" class="acc-input" id="ID No" placeholder="xxxxxxxx" required>
+        <button type="submit" class="acc-button">SIGN UP</button>
     </div>
-</body>
-</html>
+</div>
+</main>
+{% endblock %}
