--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../static/css/styles.css">
 </head>
-<body>
-    <div class="container">
-        <div class="image-section"></div>
-        <div class="form-section">
-            <h1>Login</h1>
-            <p>Sign in to continue</p>
-            <hr>
-            <label for="email">Please enter Email</label>
-            <input type="email" id="email" placeholder="hello@reallygreatsite.com" required>
-            <label for="password">Please enter password</label>
-            <input type="password" id="password" placeholder="********" required>
-            <button type="submit">LOGIN</button>
+<body class="my-body">
+    <div class="login-container flex flex-col md:flex-row w-full h-full">
+        <div class="my-image-section w-full md:w-1/2 h-64 md:h-auto"></div>
+        <div class="form-section-area w-full md:w-1/2 flex flex-col items-center justify-center p-6">
+            <h1 class="hi-login">Login</h1>
+            <p class="my-sign-in">Sign in to continue</p>
+            <hr class="login-hr w-8/4">
+            <label for="email" class="email-label">Please enter Email</label>
+            <input type="email" id="email" placeholder="hello@reallygreatsite.com" required class="rop-input">
+            <label for="password" class="password-center">Please enter password</label>
+            <input type="password" id="password" placeholder="********" required class="rop-input">
+            <button type="submit" class="login-button">LOGIN</button>
         </div>
     </div>
 </body>
