--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,19 +1,21 @@
 {% extends "base.html" %}  
 {% block content %}  
-<div class="container">  
+<div class="contmage">  
     <div class="left">  
         <img src="../static/images/image1.png" alt="Placeholder" class="object-cover h-full w-full">  
     </div>  
     <div class="form-section">  
         <div class="text-center">  
-            <h1 class="text-4xl font-bold">Forgot Password</h1>  
-            <h2 class="text-light mb-8 mt-4">New Password</h2>  
+            <h1 class="custom-heading">Forgot Password</h1>  
+            <h2 class="custom-subheading">New Password</h2>  
         </div>  
         
         <hr class="divider">  
-        <label for="email" class="block text-gray-400 mb-4">Please enter Email</label>  
-        <input type="email" id="email" placeholder="hello@reallygreatsite.com" class="border border-gray-300 p-2 rounded w-full mb-6" required>  
-        <button class="bg-light-green-500 text-white py-2 px-4 rounded">SEND</button>  
+        <label for="email" class="custom-label">Please enter Email</label>  
+        <input type="email" id="email" class="custom-input" placeholder="hello@reallygreatsite.com">
+        <div class="btn">  
+        <button class="custom-button">SEND</button>
+    </div>  
     </div>  
 </div>  
 {% endblock %}
