--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
           <!-- Sidebar -->
           <div class="glass-sidebar d-flex flex-column">
             <!-- TabPay Logo -->
-            <div class="tabpay-logo"><span>Tab</span>Pay</div>
+            <div class="tabpay-logo m-2"><img src="../static/images/logo.png" alt=""></div>
 
             <a href="{{url_for('main.dashboard_stats')}}" 
             style="background-color: {% if 'Dashboard' in title %} rgb(3, 185, 3) {% endif %}; 
